Fix bug: container and font overflow bug fix, screen-size adaptive app bug fix

--- a/style.css
+++ b/style.css
@@ -8,11 +8,6 @@ second color = #a2a8d3
 third color = #38598b
 fourth color = #113f67 */
 
-body,
-html {
-  height: 100%;
-}
-
 #main {
   background-color: #e7eaf6;
   height: 100vh;
@@ -27,9 +22,9 @@ html {
 }
 
 #gameboard_container {
-  margin-top: 100px;
-  height: 500px;
-  width: 500px;
+  margin-top: 12vh;
+  height: min(60vh, 60vw);
+  width: min(60vh, 60vw);
   display: grid;
   grid-template-rows: repeat(3, 1fr);
   grid-template-columns: repeat(3, 1fr);
@@ -51,7 +46,7 @@ html {
 }
 
 #gameboard_container > div > div {
-  font-size: 10rem;
+  font-size: min(15vh,15vw);
   position: absolute;
   position: absolute;
   top: 50%;
@@ -136,20 +131,24 @@ html {
   position: relative;
   top: 0;
 
-  height: 10vw;
+  height: 15vh;
   width: 100vw;
   background-color: #a2a8d3;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 4rem;
+}
+
+.header #page_heading {
+  font-size: 12vh;
 }
 
 .header .player_turn {
   position: absolute;
-  font-size: 2rem;
+  font-size: 6vh;
   left: 75%;
 }
+
 
 button {
   width: 200px;
